--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <meta property="og:title" content="Χριστιάνα Ζενέλη - Κλινική Ψυχολόγος | Θεραπεία Άγχους & Online Συνεδρίες">
     <meta property="og:description" content="Κλινική Ψυχολόγος στην Αθήνα. Εξειδικευμένη θεραπεία άγχους, κατάθλιψης και διαχείρισης στρες. Online συνεδρίες.">
     <meta property="og:image" content="https://christianazeneli.com/images/profile-photo.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Χριστιάνα Ζενέλη - Κλινική Ψυχολόγος">
     <meta property="og:locale" content="el_GR">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:site_name" content="Christiana Zeneli - Clinical Psychologist">
@@ -32,7 +35,8 @@
     <meta name="twitter:url" content="https://christianazeneli.com/">
     <meta name="twitter:title" content="Χριστιάνα Ζενέλη - Κλινική Ψυχολόγος">
     <meta name="twitter:description" content="Κλινική Ψυχολόγος στην Αθήνα. Εξειδικευμένη θεραπεία άγχους, κατάθλιψης και online συνεδρίες.">
-    <meta name="twitter:image" content="https://christianazeneli.com/images/profile-photo.jpg">
+    <meta name="twitter:image" content="https://chirstiana-website.netlify.app/images/profile-photo.jpg">
+    <meta name="twitter:image:alt" content="Χριστιάνα Ζενέλη - Κλινική Ψυχολόγος">
     
     <!-- Hreflang Tags for Multilingual SEO -->
     <link rel="alternate" hreflang="el" href="https://christianazeneli.com/">
