--- a/index.html
+++ b/index.html
@@ -244,8 +244,14 @@
                     <li><a href="#about" data-en="About" data-el="Σχετικά">About</a></li>
                     <li><a href="#services" data-en="Services" data-el="Υπηρεσίες">Services</a></li>
                     <li><a href="#contact" data-en="Contact" data-el="Επικοινωνία">Contact</a></li>
+                    <li class="mobile-lang-switcher">
+                        <div class="language-switcher">
+                            <button class="lang-btn active" data-lang="en">EN</button>
+                            <button class="lang-btn" data-lang="el">EL</button>
+                        </div>
+                    </li>
                 </ul>
-                <div class="language-switcher">
+                <div class="language-switcher desktop-lang-switcher">
                     <button class="lang-btn active" data-lang="en">EN</button>
                     <button class="lang-btn" data-lang="el">EL</button>
                 </div>
