--- a/index.html
+++ b/index.html
@@ -271,6 +271,22 @@
                 <div class="hero-text">
                     <h1 class="hero-title" data-en="A Safe Space for Your Journey to Well-Being" data-el="Ένας Ασφαλής Χώρος για το Ταξίδι σας προς την Ευημερία">Ένας Ασφαλής Χώρος για το Ταξίδι σας προς την Ευημερία</h1>
                     <p class="hero-description" data-en="Welcome. I'm Christiana Zeneli, a clinical psychologist, and I'm here to support you on your path toward greater peace, understanding, and personal growth. With years of experience in clinical psychology, I provide compassionate, evidence-based therapy through secure online sessions. Whether you're navigating anxiety, stress, life transitions, or simply seeking deeper self-awareness, I offer a warm, non-judgmental space where you can explore your thoughts and feelings at your own pace. Together, we'll work toward the clarity and balance you deserve." data-el="Καλώς ήρθατε. Είμαι η Χριστιάνα Ζενέλη, κλινική ψυχολόγος, και είμαι εδώ για να σας στηρίξω στον δρόμο σας προς μεγαλύτερη ειρήνη, κατανόηση και προσωπική ανάπτυξη. Με χρόνια εμπειρίας στην κλινική ψυχολογία, παρέχω συμπονετική, βασισμένη σε αποδεδειγμένες μεθόδους θεραπεία μέσω ασφαλών online συνεδριών. Είτε αντιμετωπίζετε άγχος, στρες, μεταβάσεις στη ζωή ή απλά αναζητάτε βαθύτερη αυτογνωσία, προσφέρω έναν ζεστό, μη-κριτικό χώρο όπου μπορείτε να εξερευνήσετε τις σκέψεις και τα συναισθήματά σας στον δικό σας ρυθμό. Μαζί, θα εργαστούμε προς τη σαφήνεια και την ισορροπία που αξίζετε."></p>
+                    <div class="hero-credentials">
+                        <div class="credential-item">
+                            <svg class="credential-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M9 11l3 3L22 4"></path>
+                                <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"></path>
+                            </svg>
+                            <span data-en="Licensed Clinical Psychologist" data-el="Πιστοποιημένη Κλινική Ψυχολόγος">Licensed Clinical Psychologist</span>
+                        </div>
+                        <div class="credential-item">
+                            <svg class="credential-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M9 11l3 3L22 4"></path>
+                                <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"></path>
+                            </svg>
+                            <span data-en="Secure Online Sessions" data-el="Ασφαλείς Online Συνεδρίες">Secure Online Sessions</span>
+                        </div>
+                    </div>
                     <div class="hero-buttons">
                         <a href="#contact" class="btn btn-primary" data-en="Book an Appointment" data-el="Κλείστε Ραντεβού">Book an Appointment</a>
                         <a href="#services" class="btn btn-secondary" data-en="Learn More" data-el="Μάθετε Περισσότερα">Learn More</a>
